# libwangv

./: Makefile.in  configure  configure.ac
src/: encrypt.cpp  functionstemplate.h  globlekey.cpp  shellcommand.h  standard.h  threadtemplate.h
test/: Makefile  base.cpp  base.h  main.cpp  value.cpp
