#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

MAJOR_VERSION=1
MINOR_VERSION=0
MICRO_VERSION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION

#AC_INIT(src/library.cpp)
#AM_INIT_AUTOMAKE(libutils,$VERSION)
AC_INIT(libwangv,1.0.0)
AC_CONFIG_SRCDIR([src/wangvlib.cpp])
AM_INIT_AUTOMAKE


AC_CONFIG_MACRO_DIR([m4])  
AC_CONFIG_HEADERS(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile
	 src/Makefile
	  )
